Bug 106492 - FILESAVE: DOCX: Extra section created during each save
Summary: FILESAVE: DOCX: Extra section created during each save
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX
  Show dependency treegraph
 
Reported: 2017-03-11 12:31 UTC by Justin L
Modified: 2017-07-19 10:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
tdf103931_breaker.docx (7.71 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-03-11 12:31 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2017-03-11 12:31:43 UTC
Created attachment 131811 [details]
tdf103931_breaker.docx

Every time this example document round-trips in LO5.4, another empty section/carriage-return is appended, due to the fix for bug 103931 :

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-02-28 08:16:48 (GMT)
commit 6603947329a7b372a173a3c60e013e532d0bc5cf
tdf#103931 DOCX import: fix lost section break
Comment 1 Justin L 2017-03-11 12:33:16 UTC
cc to Miklos V
Comment 2 Jacques Guilleron 2017-03-11 15:10:06 UTC
Hi Justin L,
I reproduce with 
LO 5.4.0.0.alpha0+ Build ID: a5c947579253a7f4e784004e18929af5ab22fa28
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-03-02_01:57:01
Locale: fr-FR (fr_FR); Calc: CL

Jacques
Comment 3 Xisco Faulí 2017-03-12 15:46:21 UTC
Adding Cc: to Miklos Vajna
Comment 4 Miklos Vajna 2017-03-17 20:58:11 UTC
I don't really think this is a regression, the import result seems to match the WW8 import result after the above commit, so that looks OK. I'll have a look at the export bug, though.
Comment 5 Justin L 2017-03-18 05:14:28 UTC
(In reply to Miklos Vajna from comment #4)
> I'll have a look at the export bug, though.

Some more test documents might be the tdf103975_notPageBreakX docx's in ooxmlimport. They'll probably be round-trippable after this fix.
Comment 6 Commit Notification 2017-03-21 10:48:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b6e62dc0dc2b284c825f1182a67bb2f9259a30ce

tdf#106492 DOCX export: fix duplicated section break at doc end

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.