tdf#106492 DOCX export: fix duplicated section break at doc end

There is always a section break at the end of a DOCX document, so in the
rare case when there is no text node between the end of a Writer section
and the end of the document make sure no duplicated section break is
written.

Change-Id: I3fcd852c1a63e2d707822ad08603e2d37386e439